fix header buttons overlapping shadow at bottom of header

--- a/public/global.css
+++ b/public/global.css
@@ -164,6 +164,7 @@ button, input[type=submit], .btn:active:hover{
     fill: #1f1f1f;
     stroke: #1f1f1f;
     border: 0px solid transparent;
+    height: 2em;
 }
 .headerBtn:hover{
     background: #333333;
